4.2.2
-----
1. Fix hiding un-pinned queue when click on link and window is narrow.
2. Adjust now-playing bar size settings to allow for mini-player use-case.
3. Better handling of volume dialog for mini-player use-case.

4.2.1
-----
1. Adjust unpinned queue metrics when used on mobile.
2. Fix now-playing updates due to use of extid in track sources.
3. Always request extid for player status, as showing logo/emblems regardless.
4. Update some CSS @media rules.

4.2.0
-----
 1. Add ability to search for items in lists (browse and queue).
 2. Click on now-playing cover-art to show skip, menu, and close buttons.
 3. Remove now-playing pulse, as clicking cover shows buttons.
 4. Hide menu and close buttons on now-playing screen if using 'np-only' URL.
 5. Work-around volume control moving in desktop layout when toggle MAI button.
 6. Better handling of now-playing button sizes for very narrow screen widths.
 7. Fix track list indents.
 8. Always use light text for now-playing menu and close icons.
 9. Fix blank area showing at bottom of screen when using now-playing bar on
    mobile layout with keyboard shown.
10. Cache similar-artists response to 'Cache/material-skin/similar-artists/'
11. Add some album related actions to sub-toolbar of album review.
12. Remove add/play actions from toolbar when navigating into genre from genre
    link.
13. If 10 or less items in a 'choice' dialog then allow using numeric keys as
    shortcut.
14. Clicking on scan status in 'Information' dialog will open server settings
    at 'Server status' page.
15. Ensure album and track sorts are valid.
16. Place custom track sorts into separate tag, so as to not confuse LMS.
17. Add Bandcamp to list of search providers.
18. Clicking on RadioParadise logo on now-playing cover should open browser at
    song details on RadioParadise website.
19. Draw a 'link' symbol next to synchronised players in 'Manage players'
    dialog.