@@ -3,6 +3,9 @@
 1. Fix hiding un-pinned queue when click on link and window is narrow.
 2. Adjust now-playing bar size settings to allow for mini-player use-case.
 3. Better handling of volume dialog for mini-player use-case.
+4. Change order of add/play buttons to be "(+) (>)"
+5. If play shuffled option is enabled, then show play shuffle icon in detailed
+   sub-toolbar and when hovering.
 
 4.2.1
 -----
